Fix alignment better.

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -345,7 +345,7 @@ pre.plain {
   margin: 0 5px;
   color: @gray-light;
   line-height: 1;
-  vertical-align: bottom;
+  vertical-align: middle;
 
   &:hover {
     color: @gray;
